# packageurl-python

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  appveyor.yml  new_test_purl.py  newtest_purl.py  requirements.build.txt  requirements.test.txt  setup.cfg  setup.py  test-suite-data.json  test_purl.py
.github/workflows/: ci.yml  pypi-release.yml
etc/scripts/: generate_validators.py
src/: packageurl.py
src/packageurl/: __init__.py  utils.py  validate.py
src/packageurl/contrib/: django_models.py  purl2url.py  route.py  url2purl.py
src/packageurl/contrib/django/: filters.py  models.py  utils.py
tests/: test_packageurl.py  test_purl_spec.py
tests/contrib/: test_get_path_segments.py  test_purl2url.py  test_url2purl.py  test_utils.py
tests/contrib/data/: url2purl.json
tests/data/: test-suite-data.json
