[bdist_wheel]
universal = 1

[metadata]
license_files =
    - mit.LICENSE
    - AUTHORS.rst
    - README.rst
    - CONTRIBUTING.rst
    - CHANGELOG.rst

[aliases]
release = clean --all sdist bdist_wheel

[tool:pytest]
norecursedirs =
    .git
    tmp
    dist
    build
    _build
    local
    ci
    docs
    man
    share
    samples
    .cache
    .settings
    Include
    include
    Lib
    lib
    Scripts
    thirdparty
    tmp
    src/packageurl/contrib

python_files = *.py

python_classes=Test
python_functions=test

addopts =
    -rfEsxXw
    --strict
    --ignore setup.py
    --doctest-modules
