[metadata]
name = packageurl-python
version = 0.10.0
license = MIT
description = A purl aka. Package URL parser and builder
long_description = file:README.rst
author = the purl authors
url = https://github.com/package-url/packageurl-python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    package
    url
    package manager
    package url
license_files =
    - mit.LICENSE
    - AUTHORS.rst
    - README.rst
    - CONTRIBUTING.rst
    - CHANGELOG.rst

[options]
python_requires = >=3.6
packages = find:
package_dir = =src
include_package_data = true
zip_safe = false
install_requires =

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    isort
    black
build =
    wheel

[isort]
force_single_line = True
line_length = 100
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
norecursedirs =
    .git
    tmp
    dist
    build
    _build
    local
    ci
    docs
    man
    share
    samples
    .cache
    .settings
    Include
    include
    Lib
    lib
    Scripts
    thirdparty
    tmp
    src/packageurl/contrib
python_files = *.py
python_classes=Test
python_functions=test
addopts =
    -rfExXw
    --strict-markers
    --ignore setup.py
    --doctest-modules
